[package]
name = "wharf"
version = "0.1.4"
authors = ["wojciechkepka <wojtek.kepka@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wojciechkepka/wharf"
repository = "https://github.com/wojciechkepka/wharf"
keywords = ["docker", "api",]
description = "Asynchronous docker api library"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
url = "2.1.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
base64 = "0.11"
log = "0.4.8"
