[package]
name = "wharf"
version = "0.1.10"
authors = ["wojciechkepka <wojtek.kepka@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wojciechkepka/wharf"
repository = "https://github.com/wojciechkepka/wharf"
keywords = ["docker", "api"]
description = "Asynchronous docker api library"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
hyper = "0.13.1"
base64 = "0.11"
log = "0.4.8"
futures = "0.3.1"
http = "0.2"

tokio = { version = "0.2.4", features = ["macros"] }
pretty_env_logger = "0.3.1"

[dev-dependencies]
tokio = { version = "0.2.4", features = ["macros"] }
pretty_env_logger = "0.3.1"
